[package]
name = "code-sandbox"
version = "0.1.0"
authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bodyparser = "0.8.0"
corsware = "0.2.0"
env_logger = "0.7.0"
iron = "0.6.0"
lazy_static = "1.0.0"
log = "0.4.0"
tempdir = "0.3.7"
mount = "0.4.0"
petgraph = "0.5.0"
regex = "1.0.0"
rustc-demangle = "0.1.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
hubcaps = "0.6.0"
tokio = { version = "0.2.9", features = ["macros", "time", "process", "rt-threaded"] }
router = "0.6.0"
openssl-probe = "0.1.2"
dotenv = "0.15.0"
snafu = "0.6.0"