[package]
name = "code-sandbox"
version = "0.1.0"
authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8"
lazy_static = "1.0"
log = "0.4"
tempdir = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["time", "process", "macros", "rt", "rt-multi-thread"] }
thiserror = "1.0"