[package]
name = "playground"
version = "0.0.1"
authors = ["The Rust Playground"]
edition = "2018"

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
incremental = false

[dependencies.serde]
package = "serde"
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
package = "serde_json"
version = "1.0"